--- a/.gitignore
+++ b/.gitignore
@@ -165,3 +165,4 @@ cython_debug/
 .idea/inspectionProfiles/profiles_settings.xml
 /frontend/Zephyr/obj
 /frontend/Zephyr/.vs/Zephyr
+/frontend/Zephyr/bin/Debug/net8.0
