Added Basis for Feed and Project Structure

--- a/.gitignore
+++ b/.gitignore
@@ -166,3 +166,4 @@ cython_debug/
 /frontend/Zephyr/obj
 /frontend/Zephyr/.vs/Zephyr
 /frontend/Zephyr/bin/Debug/net8.0
+/frontend/Zephyr/.vs/ProjectEvaluation
