--- a/frontend/Zephyr/Zephyr.csproj
+++ b/frontend/Zephyr/Zephyr.csproj
@@ -7,6 +7,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Blazored.SessionStorage" Version="2.4.0" />
     <PackageReference Include="Radzen.Blazor" Version="4.21.4" />
   </ItemGroup>
 
