- Improved User Profile - Fixed issue with Statehaschanged in the main layout

--- a/.gitignore
+++ b/.gitignore
@@ -169,3 +169,4 @@ cython_debug/
 /frontend/Zephyr/.vs/Zephyr
 /frontend/Zephyr/bin/Debug/net8.0
 /frontend/Zephyr/.vs/ProjectEvaluation
+/frontend/Zephyr/bin/Release/net8.0
