--- a/frontend/Zephyr/Dockerfile
+++ b/frontend/Zephyr/Dockerfile
@@ -16,4 +16,4 @@ RUN dotnet publish "Zephyr.csproj" -c Release -o /app/publish
 FROM base AS final
 WORKDIR /app
 COPY --from=publish /app/publish .
-ENTRYPOINT ["dotnet", "Zephyr.dll"]
+ENTRYPOINT ["dotnet", "Zephyr.dll", "--environment=Docker"]
