--- a/.github/workflows/docker-server.yml
+++ b/.github/workflows/docker-server.yml
@@ -1,8 +1,8 @@
 name: Publish Zephyr Server Docker Image
 
 on:
-  push:
-      branches: [ "feature/docker" ]
+  release:
+    types: [published]
 
 jobs:
   push_to_registry:
@@ -30,7 +30,5 @@ jobs:
           context: .
           file: ./Dockerfile
           push: true
-          tags: |
-            - ${{ steps.meta.outputs.tags }}
-            - latest
+          tags: ${{ steps.meta.outputs.tags }}
           labels: ${{ steps.meta.outputs.labels }}
