--- a/ml_microservice/.env
+++ b/ml_microservice/.env
@@ -1,2 +1,4 @@
 KAFKA_TEXT_GENERATION_RESPONSE=text_generation_response
 KAFKA_SENTIMENT_ANALYSIS_RESPONSE=sentiment_analysis_response
+KAFKA_TEXT_GENERATION_REQUEST=text_generation_request
+KAFKA_SENTIMENT_ANALYSIS_REQUEST=sentiment_analysis_request
