First version of resize service

--- a/.env
+++ b/.env
@@ -6,4 +6,6 @@ KAFKA_TEXT_GENERATION_RESPONSE=text_generation_response
 KAFKA_SENTIMENT_ANALYSIS_RESPONSE=sentiment_analysis_response
 KAFKA_TEXT_GENERATION_REQUEST=text_generation_request
 KAFKA_SENTIMENT_ANALYSIS_REQUEST=sentiment_analysis_request
+KAFKA_RESIZE_REQUEST=resize_request
+KAFKA_RESIZE_RESPONSE=resize_response
 KAFKA_HOST=kafka
