Resize Service Stuff

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -62,6 +62,9 @@ services:
       KAFKA_ADVERTISED_LISTENERS: PLAINTEXT://kafka:9092
       KAFKA_OFFSETS_TOPIC_REPLICATION_FACTOR: 1
       KAFKA_LOG_DIRS: /var/lib/kafka/data
+      KAFKA_MESSAGE_MAX_BYTES: 20000000
+      KAFKA_MAX_REQUEST_SIZE: 20000000
+      KAFKA_PRODUCER_MAX_REQUEST_SIZE: 20000000
       #KAFKA_INTER_BROKER_LISTENER_NAME: INSIDE
     networks:
       - kafka
