--- a/ml_microservice/requirements.txt
+++ b/ml_microservice/requirements.txt
@@ -41,3 +41,8 @@ typing_extensions==4.8.0
 urllib3==2.1.0
 uuid==1.30
 uvicorn==0.24.0.post1
+transformers~=4.36.2
+torch~=2.1.2
+confluent-kafka~=2.3.0
+python-dotenv~=1.0.0
+aiokafka~=0.10.0
